--- a/src/main/resources/style.css
+++ b/src/main/resources/style.css
@@ -21,11 +21,19 @@ AnchorPane {
             #EECDA3 0%,
             #EF629F 50%
     );
-
+    -fx-background-image: url('bcg.png');
 }
 
-TextField {
-    -fx-font-family: "Lofty";
+TextField{
+    -fx-font-family: "Lucida Handwriting";
     -fx-text-fill: white;
+    -fx-text-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.3), 10, 0.5, 0.0, 0.0);
+    -fx-font-size: 20px;
+     -fx-background-color: "transparent"
+}
+
+Button{
+    -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.3), 10, 0.5, 0.0, 0.0);
     -fx-background-color: black;
+    -fx-text-fill: white;
 }
