--- a/src/main/resources/simulationPage.fxml
+++ b/src/main/resources/simulationPage.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="SimulationPage"
+            fx:controller="com.kociokwik.animalSimulation.GUI.SimulationPage"
             prefHeight="400.0" prefWidth="600.0">
 
 </AnchorPane>
