--- a/src/main/resources/simulationPage.fxml
+++ b/src/main/resources/simulationPage.fxml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.control.TextArea?>
 
-<?import javafx.scene.control.Button?>
-<AnchorPane prefHeight="526.0" prefWidth="705.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="529.0" prefWidth="932.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
     <children>
         <GridPane id="grid" gridLinesVisible="true" layoutY="59.0" prefHeight="465.0" prefWidth="473.0">
             <columnConstraints>
@@ -23,6 +23,8 @@
         <Button id="resume" layoutX="504.0" layoutY="59.0" mnemonicParsing="false" text="Resume" />
         <Button id="pause" layoutX="632.0" layoutY="59.0" mnemonicParsing="false" text="Pause" />
         <Button id="stop" layoutX="542.0" layoutY="17.0" mnemonicParsing="false" text="Stop simulation" />
-        <TextArea id = "stats" layoutX="491.0" layoutY="91.0" prefHeight="413.0" prefWidth="200.0" />
+        <TextArea id="stats" layoutX="491.0" layoutY="91.0" prefHeight="413.0" prefWidth="250.0" />
+      <TextArea id="animalStats" layoutX="712.0" layoutY="91.0" prefHeight="413.0" prefWidth="250.0" />
+      <Label layoutX="763.0" layoutY="63.0" text="Single animal stats" />
     </children>
 </AnchorPane>
