--- a/src/main/resources/simulationPage.fxml
+++ b/src/main/resources/simulationPage.fxml
@@ -2,29 +2,60 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="529.0" prefWidth="932.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
     <children>
-        <GridPane id="grid" gridLinesVisible="true" layoutY="59.0" prefHeight="465.0" prefWidth="473.0">
+        <GridPane layoutY="6.0" prefHeight="700.0" prefWidth="1500.0" styleClass="allGrid">
             <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" prefWidth="900.0" />
+                <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" prefWidth="600.0" />
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints prefHeight="700.0" vgrow="SOMETIMES" />
             </rowConstraints>
+            <children>
+                <GridPane maxHeight="1.7976931348623157E308" prefHeight="301.0" prefWidth="600.0" style="-fx-background-color: rgba(11, 37, 203, 0);" styleClass="statsGrid" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+                    <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="94.4000244140625" minWidth="10.0" prefWidth="66.40001220703125" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="261.5999267578125" minWidth="10.0" prefWidth="261.5999267578125" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="92.800048828125" minWidth="10.0" prefWidth="56.00007324218751" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="282.39992675781247" minWidth="10.0" prefWidth="191.800048828125" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="179.9999267578125" minWidth="10.0" prefWidth="25.599951171874977" />
+                    </columnConstraints>
+                    <rowConstraints>
+                        <RowConstraints maxHeight="59.59999694824219" minHeight="10.0" prefHeight="42.79999389648438" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="95.60001220703126" minHeight="0.0" prefHeight="33.599999999999994" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="431.9999938964844" minHeight="10.0" prefHeight="200.6" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                    <children>
+                        <Button id="stop" mnemonicParsing="false" text="Stop simulation" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+                        <Button id="pause" mnemonicParsing="false" text="Pause" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+                        <Label text="Single animal stats" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+                        <TextArea id="animalStats" prefHeight="363.0" prefWidth="194.0" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+                        <TextArea id="stats" prefHeight="432.0" prefWidth="239.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <Label id="test" alignment="CENTER" prefHeight="31.0" prefWidth="303.0" text="Cats Simulation" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                    </children>
+                </GridPane>
+                <ScrollPane fitToHeight="true" fitToWidth="true" style="-fx-background-color: rgba(11, 37, 203, 0);" styleClass="back" GridPane.halignment="CENTER">
+                    <content>
+                        <GridPane id="grid" gridLinesVisible="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="628.0" prefWidth="898.0" styleClass="animalsGrid">
+                            <columnConstraints>
+                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                            </columnConstraints>
+                            <rowConstraints>
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            </rowConstraints>
+                        </GridPane>
+                    </content>
+                </ScrollPane>
+            </children>
         </GridPane>
-        <Label id="test" layoutX="59.0" layoutY="14.0" prefHeight="31.0" prefWidth="303.0" />
-        <Button id="resume" layoutX="504.0" layoutY="59.0" mnemonicParsing="false" text="Resume" />
-        <Button id="pause" layoutX="632.0" layoutY="59.0" mnemonicParsing="false" text="Pause" />
-        <Button id="stop" layoutX="542.0" layoutY="17.0" mnemonicParsing="false" text="Stop simulation" />
-        <TextArea id="stats" layoutX="491.0" layoutY="91.0" prefHeight="413.0" prefWidth="250.0" />
-      <TextArea id="animalStats" layoutX="712.0" layoutY="91.0" prefHeight="413.0" prefWidth="250.0" />
-      <Label layoutX="763.0" layoutY="63.0" text="Single animal stats" />
     </children>
 </AnchorPane>
